--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "ARDY",
   "version": "1.0",
   "description": "Display adjusted video length based on playback rate multiplier",
-  "permissions": ["activeTab"],
+  "permissions": ["scripting"],
   "action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
