--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "description": "Display adjusted video length based on playback rate multiplier",
   "permissions": ["scripting"],
   "action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon.png"
   },
   "content_scripts": [
     {
